# skilledpi

./: .gitignore  AGENTS.md  README.md  alembic.ini  generate_proto.py  main.py  pyproject.toml  requirements.txt  setup_cython.py
alembic/: env.py
alembic/versions/: cc1f4fd6ae26_initial_schema.py
chibu/: __init__.py  cli.py
chibu/agent/: pi_agent.py  skill_loader.py
chibu/control_plane/: app.py  deps.py
chibu/control_plane/routers/: agents.py  chiboos.py  dashboard.py  events.py  groups.py  ws.py
chibu/control_plane/static/: main.js
chibu/control_plane/templates/: agent_detail.html  index.html
chibu/db/: engine.py  models.py
chibu/extension/: runner.py
chibu/grpc_server/: chibu_agent_pb2.py  chibu_agent_pb2_grpc.py  client.py  server.py  servicer.py
chibu/honker/: __init__.py  _channels.py  _db.py  _queues.py  _streams.py  _workers.py
chibu/otel/: __init__.py  metrics.py  tracing.py
chibu/process/: manager.py
chibu/registry/: agent_registry.py
chibu/utils/: auth.py  filesystem.py
defaults/: config.yaml  models.json
defaults/pi_extensions/: otel_extension.py
defaults/pi_skills/: list_directory.py  read_file.py  run_python.py  write_file.py
proto/: chibu_agent.proto
tests/: test_auth.py  test_builtin_skills.py  test_control_plane_api.py  test_honker_notify.py  test_honker_queues.py  test_honker_stream.py  test_registry.py  test_skill_loader.py
